Follow-up fix to MDEV-16865: InnoDB fts_query() ignores KILL

fts_query(): Remove a redundant condition (result will never be NULL),
and instead check if *result is NULL, to prevent SIGSEGV in
fts_query_free_result().